--- a/code/package.yaml
+++ b/code/package.yaml
@@ -9,6 +9,7 @@ dependencies:
 library:
   source-dirs: src
   dependencies:
+    - attoparsec
     - bytestring
     - directory
     - postgresql-simple
